Removed dependency on FTBM and reimplemented FTBIC Materials